/**
 * @file main.go
 * @brief Go Scheduler å…¥å£
 * 
 * æ¶æ„å®šä½: ä»»åŠ¡è°ƒåº¦å±‚
 * æŠ€æœ¯é€‰å‹: Etcd (æœåŠ¡å‘ç°) + gRPC (Worker é€šä¿¡) + Redis (ä»»åŠ¡é˜Ÿåˆ—)
 * 
 * ===========================================================================
 * é¢è¯•å…«è‚¡çŸ¥è¯†ç‚¹
 * ===========================================================================
 * 
 * 1. Etcd æœåŠ¡å‘ç° vs ä¼ ç»Ÿé…ç½®:
 *    - ä¼ ç»Ÿ: ç¡¬ç¼–ç  Worker åœ°å€ï¼Œé‡å¯æ‰èƒ½æ›´æ–°
 *    - Etcd: Worker åŠ¨æ€æ³¨å†Œï¼Œå®æ—¶æ„ŸçŸ¥å˜åŒ–
 *    - Lease æœºåˆ¶: Worker å®šæœŸç»­çº¦ï¼Œè¶…æ—¶è‡ªåŠ¨æ³¨é”€
 * 
 * 2. è´Ÿè½½å‡è¡¡ç­–ç•¥:
 *    - Round-Robin: ç®€å•è½®è¯¢ï¼Œé€‚åˆåŒæ„æœåŠ¡
 *    - Weighted: åŠ æƒè½®è¯¢ï¼Œæ ¹æ® Worker èƒ½åŠ›åˆ†é…
 *    - Least-Connections: æœ€å°‘è¿æ¥ä¼˜å…ˆ
 *    - Consistent-Hashing: ä¸€è‡´æ€§å“ˆå¸Œï¼Œé€‚åˆç¼“å­˜åœºæ™¯
 * 
 * 3. gRPC ä¼˜åŠ¿:
 *    - HTTP/2: å¤šè·¯å¤ç”¨ï¼Œå¤´éƒ¨å‹ç¼©
 *    - Protobuf: ç´§å‡‘çš„äºŒè¿›åˆ¶åºåˆ—åŒ–
 *    - æµå¼ä¼ è¾“: åŒå‘æµæ”¯æŒ
 *    - ä»£ç ç”Ÿæˆ: å¼ºç±»å‹æ¥å£
 * 
 * 4. å¯é æ€§è®¾è®¡:
 *    - ACK æœºåˆ¶: ä»»åŠ¡ç¡®è®¤åæ‰ä»é˜Ÿåˆ—ç§»é™¤
 *    - è¶…æ—¶æ£€æµ‹: å¤„ç†ä¸­ä»»åŠ¡è¶…æ—¶åé‡æ–°å…¥é˜Ÿ
 *    - é‡è¯•ç­–ç•¥: æŒ‡æ•°é€€é¿ (Exponential Backoff)
 */
package main

import (

	"context"
	"log"
	"net/http"
	"os"
	"os/signal"
	"strings"
	"syscall"
	"time"

	"github.com/d1guo/deep_oj/internal/repository"
	"github.com/d1guo/deep_oj/internal/scheduler"
	pb "github.com/d1guo/deep_oj/pkg/proto"
	"github.com/prometheus/client_golang/prometheus/promhttp"
	"google.golang.org/protobuf/proto"
)

func main() {
	// =========================================================================
	// 1. è¯»å–é…ç½®
	// =========================================================================
	etcdEndpoints := os.Getenv("ETCD_ENDPOINTS")
	if etcdEndpoints == "" {
		etcdEndpoints = "localhost:2379"
	}

	redisURL := os.Getenv("REDIS_URL")
	if redisURL == "" {
		redisURL = "localhost:6379"
	}

	// =========================================================================
	// 2. åˆå§‹åŒ– Context (æ”¯æŒä¼˜é›…å…³é—­)
	// =========================================================================
	ctx, cancel := context.WithCancel(context.Background())
	defer cancel()

	// ç›‘å¬ä¸­æ–­ä¿¡å·
	sigCh := make(chan os.Signal, 1)
	signal.Notify(sigCh, syscall.SIGINT, syscall.SIGTERM)
	go func() {
		<-sigCh
		log.Println("ğŸ›‘ Received shutdown signal...")
		cancel()
	}()

	// =========================================================================
	// 3. åˆå§‹åŒ– Etcd æœåŠ¡å‘ç°
	// =========================================================================
	endpoints := strings.Split(etcdEndpoints, ",")
	discovery, err := scheduler.NewEtcdDiscovery(endpoints)
	if err != nil {
		log.Fatalf("âŒ Failed to connect to Etcd: %v", err)
	}
	defer discovery.Close()
	log.Println("âœ… Connected to Etcd")

	// å¯åŠ¨ Worker ç›‘å¬
	go discovery.WatchWorkers(ctx)

	// =========================================================================
	// 4. åˆå§‹åŒ– Redis å®¢æˆ·ç«¯
	// =========================================================================
	redisClient := repository.NewRedisClient(redisURL)
	if err := redisClient.Ping(ctx); err != nil {
		log.Fatalf("âŒ Failed to connect to Redis: %v", err)
	}
	log.Println("âœ… Connected to Redis")

	// =========================================================================
	// 4.5 åˆå§‹åŒ– PostgreSQL (ç”¨äº ACK å›è°ƒæ›´æ–°çŠ¶æ€)
	// =========================================================================
	postgresURL := os.Getenv("DATABASE_URL")
	if postgresURL == "" {
		postgresURL = "postgres://deep_oj:secret@localhost:5432/deep_oj?sslmode=disable"
	}
	db, err := repository.NewPostgresDB(ctx, postgresURL)
	if err != nil {
		log.Fatalf("âŒ Failed to connect to PostgreSQL: %v", err)
	}
	defer db.Close()
	log.Println("âœ… Connected to PostgreSQL")

	// å¯åŠ¨ ACK ç›‘å¬å™¨
	go scheduler.StartAckListener(ctx, redisClient, db)

	// =========================================================================
	// 6. [Task 3.3] å¯åŠ¨ç›‘æ§ (Probes & Metrics)
	// =========================================================================
	
	// 6.1 å¯åŠ¨ Metrics Poller (Redis/Etcd çŠ¶æ€)
	go scheduler.StartMetricsPoller(ctx, redisClient, discovery)

	// 6.2 æš´éœ² Prometheus Metrics endpoint
	http.Handle("/metrics", promhttp.Handler())
	go func() {
		metricsPort := ":9091"
		log.Printf("ğŸ“Š Metrics server starting on %s", metricsPort)
		if err := http.ListenAndServe(metricsPort, nil); err != nil {
			log.Printf("âš ï¸ Metrics server error: %v", err)
		}
	}()

	// å¯åŠ¨æ…¢è·¯å¾„å…œåº• (Slow Path)
	go scheduler.StartSlowPath(ctx, redisClient)

	// =========================================================================
	// 5. å¯åŠ¨ä»»åŠ¡åˆ†å‘å¾ªç¯
	// =========================================================================
	log.Println("ğŸš€ Scheduler started, waiting for tasks...")

	for {
		select {
		case <-ctx.Done():
			log.Println("ğŸ‘‹ Scheduler exited")
			return
		default:
		}

		// é˜»å¡ç­‰å¾…ä»»åŠ¡ (5 ç§’è¶…æ—¶)
		result, err := redisClient.BRPopLPush(ctx, "queue:pending", "queue:processing", 5*time.Second)
		if err != nil || result == "" {
			continue
		}

		// è§£æä»»åŠ¡ (Protobuf)
		task := &pb.TaskRequest{}
		if err := proto.Unmarshal([]byte(result), task); err != nil {
			log.Printf("âš ï¸ Failed to parse task: %v", err)
			continue
		}

		jobID := task.JobId
		log.Printf("ğŸ“¦ Received task: %s", jobID)

		// è·å–å¯ç”¨ Worker
		workerAddr, ok := discovery.GetNextWorker()
		if !ok {
			log.Printf("âš ï¸ No workers available, task %s will retry later", jobID)
			// ä»»åŠ¡ç•™åœ¨ processing é˜Ÿåˆ—ï¼Œç­‰å¾…é‡è¯•
			continue
		}

		// å¼‚æ­¥åˆ†å‘ä»»åŠ¡
		go func(addr string, taskData []byte) {
			if err := scheduler.DispatchTask(ctx, addr, taskData, redisClient); err != nil {
				log.Printf("âŒ Failed to dispatch task %s: %v", jobID, err)
				// å¤±è´¥æ—¶ç§»å› pending é˜Ÿåˆ—
				redisClient.LPush(ctx, "queue:pending", string(taskData))
			} else {
				// æˆåŠŸæ—¶ä¸ç§»é™¤ï¼ç­‰å¾… ACK Listener ç§»é™¤
				// redisClient.LRem(ctx, "queue:processing", 1, string(taskData))
				log.Printf("dispatch success")
			}
		}(workerAddr, []byte(result))
	}
}
